operations-k8s-dev/microservices/dev/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-albnotejam
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "public"
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
    alb.ingress.kubernetes.io/security-groups: "NoteJam-Alb-SG-dev"
    alb.ingress.kubernetes.io/success-codes: 200,301,302

spec:
  ingressClassName: public
  rules:
    - host: "dev-notejam.aqazi.xyz" 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam-dev-service
                port:
                  number: 80
